# edihub

./: .dockerignore  .gitignore  README.md  START_PROJECT.sh  docker-compose.yml
edibackend/: alembic.ini  pyproject.toml  requirements.txt
edibackend/app/: __init__.py  api_treo.py  config_treo.py  database_treo.py  main.py
edibackend/app/models/: __init__.py  treo_member_models.py  treo_metadata.py  treo_models.py
edibackend/app/services/: __init__.py  edi_addt_data_service.py  edi_control_seg_service.py  edi_data_service.py  edi_header_service.py  edi_trans_seg_service.py  json_file_name_generator.py  metadata_loader_834.py  treo_parser_834.py  treo_streaming_parser_834.py
edibackend/configs/: base_edi834_config.yaml  edi834_json_schema.json
edibackend/configs/clients/: virginia_medicaid_834_config.yaml  virginia_medicaid_business_rules.yaml
edibackend/configs/loops/: loop_1000A.yaml  loop_1000B.yaml  loop_1000C.yaml  loop_1100C.yaml  loop_2000.yaml  loop_2100A.yaml  loop_2100B.yaml  loop_2100C.yaml  loop_2100D.yaml  loop_2100E.yaml  loop_2100F.yaml  loop_2100G.yaml  loop_2100H.yaml  loop_2200.yaml  (+7 more)
edibackend/migrations/: env.py
edibackend/scripts/: README.md  README_MASTER_MIGRATION.md  backfill_ls_le_in_edi_data.py  check_edi_data_table.py  check_extra_columns.py  check_migrations.py  fix_migration_version.py  master_migration.py  process_edi_file.py  reset_enrollment_files.py  seed_virginia_medicaid.py  test_all_functionality.py  test_edi_header.py  test_end_to_end_ls_le.py  test_parser_1017.py  test_parser_performance.py  test_segment_capture.py
(+22 files in other folders)
