[project]
name = "edibackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.128.0",
    "jsonschema>=4.26.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.pyright]
include = ["edibackend"]
exclude = ["**/__pycache__", "**/node_modules"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.pylint.messages_control]
disable = ["import-error"]
